--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Header con Tailwind CSS</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+  <header class="bg-blue-600 text-white shadow-md">
+    <div class="container mx-auto flex justify-between items-center p-4">
     
+      <div class="text-2xl font-bold">
+        <a href="#" class="hover:text-blue-300">MiLogo</a>
+      </div>
+
+    
+      <nav class="hidden md:flex space-x-6">
+        <a href="#" class="hover:text-blue-300">Inicio</a>
+        <a href="#" class="hover:text-blue-300">Servicios</a>
+        <a href="#" class="hover:text-blue-300">Nosotros</a>
+        <a href="#" class="hover:text-blue-300">Contacto</a>
+      </nav>
+
+
+      <div>
+        <button class="bg-white text-blue-600 px-4 py-2 rounded hover:bg-blue-100">
+          Iniciar Sesión
+        </button>
+      </div>
+    </div>
+  </header>
 </body>
 </html>
